# Generated by Django 6.0 on 2025-12-14 06:16

import django.db.models.deletion
import django.utils.timezone
import uuid
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ("contenttypes", "0002_remove_content_type_name"),
        ("user", "0002_alter_client_created_at_alter_client_install_id_and_more"),
    ]

    operations = [
        migrations.CreateModel(
            name="UploadSession",
            fields=[
                (
                    "created_at",
                    models.DateTimeField(
                        default=django.utils.timezone.now, editable=False
                    ),
                ),
                ("updated_at", models.DateTimeField(default=django.utils.timezone.now)),
                (
                    "id",
                    models.UUIDField(
                        default=uuid.uuid4,
                        editable=False,
                        primary_key=True,
                        serialize=False,
                    ),
                ),
                (
                    "status",
                    models.CharField(
                        choices=[
                            ("created", "CREATED"),
                            ("presigned", "PRESIGNED"),
                            ("completed", "COMPLETED"),
                            ("failed", "FAILED"),
                        ],
                        default="created",
                        max_length=32,
                    ),
                ),
                ("purpose", models.CharField(blank=True, default="", max_length=256)),
                (
                    "client",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="upload_sessions",
                        to="user.client",
                    ),
                ),
            ],
        ),
        migrations.CreateModel(
            name="Asset",
            fields=[
                (
                    "created_at",
                    models.DateTimeField(
                        default=django.utils.timezone.now, editable=False
                    ),
                ),
                ("updated_at", models.DateTimeField(default=django.utils.timezone.now)),
                (
                    "id",
                    models.UUIDField(
                        default=uuid.uuid4,
                        editable=False,
                        primary_key=True,
                        serialize=False,
                    ),
                ),
                ("is_active", models.BooleanField(default=True)),
                ("storage_provider", models.CharField(max_length=32)),
                ("storage_key", models.CharField(max_length=512)),
                ("mime_type", models.CharField(max_length=127)),
                ("byte_size", models.BigIntegerField()),
                ("checksum", models.CharField(blank=True, max_length=128, null=True)),
                ("exif_data", models.JSONField(blank=True, null=True)),
                ("exif_captured_at", models.DateTimeField(blank=True, null=True)),
                (
                    "upload_session",
                    models.ForeignKey(
                        blank=True,
                        null=True,
                        on_delete=django.db.models.deletion.SET_NULL,
                        related_name="asset",
                        to="asset.uploadsession",
                    ),
                ),
            ],
        ),
        migrations.CreateModel(
            name="AssetRef",
            fields=[
                (
                    "created_at",
                    models.DateTimeField(
                        default=django.utils.timezone.now, editable=False
                    ),
                ),
                ("updated_at", models.DateTimeField(default=django.utils.timezone.now)),
                (
                    "id",
                    models.UUIDField(
                        default=uuid.uuid4,
                        editable=False,
                        primary_key=True,
                        serialize=False,
                    ),
                ),
                ("owner_id", models.UUIDField()),
                ("role", models.CharField(blank=True, default="", max_length=64)),
                ("ordering", models.IntegerField(default=0)),
                ("captured_at", models.DateTimeField(blank=True, null=True)),
                (
                    "asset",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.PROTECT,
                        related_name="refs",
                        to="asset.asset",
                    ),
                ),
                (
                    "owner_content_type",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        to="contenttypes.contenttype",
                    ),
                ),
            ],
            options={
                "indexes": [
                    models.Index(
                        fields=["owner_content_type", "owner_id"],
                        name="assets_asse_owner_c_f8e9b8_idx",
                    ),
                    models.Index(
                        fields=["created_at"], name="assets_asse_created_e10413_idx"
                    ),
                    models.Index(
                        fields=["captured_at"], name="assets_asse_capture_c2ae44_idx"
                    ),
                ],
            },
        ),
        migrations.AddIndex(
            model_name="uploadsession",
            index=models.Index(
                fields=["client", "created_at"], name="assets_uplo_client__fefb86_idx"
            ),
        ),
        migrations.AddIndex(
            model_name="uploadsession",
            index=models.Index(fields=["status"], name="assets_uplo_status_ad5514_idx"),
        ),
        migrations.AddIndex(
            model_name="asset",
            index=models.Index(
                fields=["storage_provider", "storage_key"],
                name="assets_asse_storage_45caa4_idx",
            ),
        ),
        migrations.AddIndex(
            model_name="asset",
            index=models.Index(
                fields=["checksum"], name="assets_asse_checksu_ab702b_idx"
            ),
        ),
        migrations.AddIndex(
            model_name="asset",
            index=models.Index(
                fields=["created_at"], name="assets_asse_created_6d1779_idx"
            ),
        ),
        migrations.AddIndex(
            model_name="asset",
            index=models.Index(
                fields=["exif_captured_at"], name="assets_asse_exif_ca_79a4d9_idx"
            ),
        ),
        migrations.AddIndex(
            model_name="asset",
            index=models.Index(
                fields=["is_active"], name="assets_asse_is_acti_7e009b_idx"
            ),
        ),
    ]
