# Generated by Django 5.2.11 on 2026-02-28 01:46

import django.db.models.deletion
import django.utils.timezone
import localized_fields.fields.char_field
import localized_fields.fields.text_field
import uuid
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = []

    operations = [
        migrations.CreateModel(
            name="RuleDefinition",
            fields=[
                (
                    "created_at",
                    models.DateTimeField(
                        default=django.utils.timezone.now, editable=False
                    ),
                ),
                ("updated_at", models.DateTimeField(default=django.utils.timezone.now)),
                (
                    "id",
                    models.UUIDField(
                        default=uuid.uuid4,
                        editable=False,
                        primary_key=True,
                        serialize=False,
                    ),
                ),
                ("code", models.CharField(max_length=64, unique=True)),
                (
                    "label",
                    localized_fields.fields.char_field.LocalizedCharField(
                        required=["en"]
                    ),
                ),
                (
                    "kind",
                    models.CharField(
                        choices=[
                            ("pattern", "PATTERN"),
                            ("bonus", "BONUS"),
                            ("limit", "LIMIT"),
                            ("special", "SPECIAL"),
                            ("dora_like", "DORA_LIKE"),
                        ],
                        max_length=32,
                    ),
                ),
                (
                    "description",
                    localized_fields.fields.text_field.LocalizedTextField(
                        blank=True, required=[]
                    ),
                ),
            ],
            options={
                "ordering": ["code"],
            },
        ),
        migrations.CreateModel(
            name="RuleLogic",
            fields=[
                (
                    "id",
                    models.UUIDField(
                        default=uuid.uuid4,
                        editable=False,
                        primary_key=True,
                        serialize=False,
                    ),
                ),
                (
                    "combine_op",
                    models.CharField(
                        blank=True,
                        choices=[("and", "AND"), ("or", "OR")],
                        default="",
                        max_length=8,
                    ),
                ),
                (
                    "rule_definition",
                    models.OneToOneField(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="logic",
                        to="rule.ruledefinition",
                    ),
                ),
            ],
        ),
        migrations.CreateModel(
            name="RuleCondition",
            fields=[
                (
                    "id",
                    models.UUIDField(
                        default=uuid.uuid4,
                        editable=False,
                        primary_key=True,
                        serialize=False,
                    ),
                ),
                ("operator", models.CharField(max_length=32)),
                ("value", models.IntegerField(blank=True, null=True)),
                ("type", models.CharField(max_length=32)),
                ("target", models.CharField(blank=True, max_length=64, null=True)),
                ("context", models.CharField(blank=True, max_length=64, null=True)),
                (
                    "rule_logic",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="conditions",
                        to="rule.rulelogic",
                    ),
                ),
            ],
        ),
        migrations.CreateModel(
            name="RuleExclusion",
            fields=[
                (
                    "id",
                    models.UUIDField(
                        default=uuid.uuid4,
                        editable=False,
                        primary_key=True,
                        serialize=False,
                    ),
                ),
                (
                    "excludes",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="excluded_by",
                        to="rule.ruledefinition",
                    ),
                ),
                (
                    "rule",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="exclusions",
                        to="rule.ruledefinition",
                    ),
                ),
            ],
            options={
                "constraints": [
                    models.UniqueConstraint(
                        fields=("rule", "excludes"), name="unique_rule_exclusion"
                    ),
                    models.CheckConstraint(
                        condition=models.Q(
                            ("rule_id", models.F("excludes_id")), _negated=True
                        ),
                        name="rule_exclusion_no_self_exclusion",
                    ),
                ],
            },
        ),
    ]
